--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="gforcenew" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gforcenew.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="locked50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\locked50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="nextraw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nextraw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +144,9 @@
   </data>
   <data name="tone50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tone50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unlocked50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unlocked50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_100x100_RPM_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\engine50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
