--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="backraw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backraw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="delete50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\delete50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="eq" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\eq.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
