FiringOrder JSON, UI and property

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -145,6 +145,9 @@
   <data name="suspension50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\suspension50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="throttle50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\throttle50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tone50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tone50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
