--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="locked50x50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\locked50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="midi50x50_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\midi50x50_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="nextraw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nextraw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
